--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<li class="active"><a href="#section1">Home</a></li>
 			<li><a href="#section2">VBA codes</a></li>
 			<li><a href="index2.html">SQL queries</a></li>
-			<!--<li><a href="index3.html">Python Excel</a></li>-->
+			<li><a href="index3.html">Tableau</a></li>
 			<li class="visible-xs-block"><a href="#section3">Contact</a></li>
 		  </ul>
 		</div>
