--- a/index2.html
+++ b/index2.html
@@ -43,6 +43,7 @@
 			<li class="active"><a href="#section1">Home</a></li>
 			<li><a href="#section2">SQL queries</a></li>
 			<li><a href="index.html">VBA codes</a></li>
+			<li><a href="index3.html">Tableau</a></li>
 			<li class="visible-xs-block"><a href="#section3">Contact</a></li>
 		  </ul>
 		</div>
