--- a/index3.html
+++ b/index3.html
@@ -33,7 +33,7 @@
 		  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>                        
+			<span class="icon-bar"></span>                   
 		  </button>
 		  <a class="navbar-brand" href="index.html">NeverTooLateToAutomate</a>
 		</div>
@@ -66,9 +66,9 @@
 						<p>Download the ready report in Tableau from the following link: <a href="Translators_list.xlsx"><b>Translators.twb</b></a></p>
 						<p>The excel file contains three sheets:</p>
 						<p>1. The Translators sheet contains the list of translators that are certified by the Polish Ministry of Justice. On the list there are their names, languages they translate, citizenship, address (country, voivodeship, city) and the year of licence being granted. [10847 rows]</p>
-						<img src="Translators.png" class="img-responsive" alt=""></h2>
+						<img src="Translators.PNG" class="img-responsive" alt=""></h2>
 						<h2><p>2. The Population sheet contains a list of cities of Poland and their respective population. The data source is Główny Urząd Statystyczny (Statictics Poland). [930 rows]</p>
-						<img src="Population.png" class="img-responsive" alt=""></h2>
+						<img src="Population.PNG" class="img-responsive" alt=""></h2>
 						<h2><p>3. The Rates sheet contains languages and the language group they belong to according to the Polish law. [52 rows]</p>
 						<ul>There are four language groups:
 						<li>Group I: English, German, French, Russian</li>
@@ -77,9 +77,9 @@
 						<li>Group IV: Non-European languages using non-latin alphabet</li>
 						</ul>
 						<p>The rates are for one page of 1125 characters from Polish.</p>
-						<img src="Rates.png" class="img-responsive" alt=""></h2>
+						<img src="Rates.PNG" class="img-responsive" alt=""></h2>
 						<h2><p>Connect to the database and create the following connections between the tables.</p>
-						<img src="Connections.png" class="img-responsive" alt=""><h2>
+						<img src="Connections.PNG" class="img-responsive" alt=""><h2>
 						
 						<h2><p><b>1. Top 20 languages in Poland</b></p>
 						<p>Conclusions: German is the most common language among the certified translators in Poland. Among the largest Polish cities Warszawa, the capital, is the leader in terms of the number of translators, followed by Kraków. The most popular language in Warszawa is English.</p>
