--- a/index3.html
+++ b/index3.html
@@ -76,7 +76,7 @@
 						<li>Group III: Non-European languages using latin alphabet</li>
 						<li>Group IV: Non-European languages using non-latin alphabet</li>
 						</ul>
-						<p>The rates are for one page of 1125 characters from Polish.</p>
+						<p>The rates are for one page of 1125 characters from Polish in PLN.</p>
 						<img src="Rates.PNG" class="img-responsive" alt=""></h2>
 						<h2><p>Connect to the database and create the following connections between the tables.</p>
 						<img src="Connections.PNG" class="img-responsive" alt=""><h2>
