--- a/index3.html
+++ b/index3.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 
-	<title>NeverTooLateToAutomate &#124; VBA and SQL repository by Piotr Janus</title>
+	<title>AutomateIt &#124; VBA and SQL repository by Piotr Janus</title>
 
 	<meta charset="utf-8" />
 	<meta name="robots" content="index, follow" />
 	<meta name="description" content="Plenty of useful VBA codes that will help you to automate your daily Excel routine &#124; Basic SQL queries to extract data from a database">
-	<meta name="keywords" content="NeverTooLateToAutomate, VBA, Visual Basic for Applications, macro, SQL, Structured Query Language, automation, process enhancement, coding">
+	<meta name="keywords" content="AutomateIt, VBA, Visual Basic for Applications, macro, SQL, Structured Query Language, Tableau, business intelligence, automation, process enhancement, coding">
 	<meta name="author" content="Piotr Janus">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="format-detection" content="telephone=no"/>
@@ -35,7 +35,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>                   
 		  </button>
-		  <a class="navbar-brand" href="index.html">NeverTooLateToAutomate</a>
+		  <a class="navbar-brand" href="index.html">AutomateIt</a>
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
 		  <ul class="nav navbar-nav">
@@ -163,7 +163,7 @@
 						<h4>
 							<p>Business Intelligence has played an increasingly important role over the last years. Knowledge of the BI tools, such as Power Bi or Tableau, is essential for anyone planning their career as a data analyst.</p>
 							<p>In this section you will find simple tutorials that will help you to take first steps in the complex BI world.</p>
-							<p>Because it is never too late to automate!</p>
+							<p>Cause it's the right time to automate it!</p>
 							<a href="mailto:piotrjanus@outlook.com?Subject=Hi Piotr" style="color: #0e5051" target="_top">piotrjanus@outlook.com</a>
 							<a href="https://pl.linkedin.com/in/januspiotr"><img src="In-2C-28px-TM.png" align="right" style="margin-right: 0px; margin-left: 0px; padding-top: px;"></a>
 						</h4>
@@ -193,7 +193,7 @@
 						<h4>
 						<p>Business Intelligence has played an increasingly important role over the last years. Knowledge of the BI tools, such as Power Bi or Tableau, is essential for anyone planning their career as a data analyst.</p>
 						<p>In this section you will find simple tutorials that will help you to take first steps in the complex BI world.</p>
-						<p>Because it is never too late to automate!</p>
+						<p>Cause it's the right time to automate it!</p>
 						<a href="mailto:piotrjanus@outlook.com?Subject=Hi Piotr" style="color: #0e5051" target="_top">piotrjanus@outlook.com</a>
 						<a href="https://pl.linkedin.com/in/januspiotr"><img src="In-2C-28px-TM.png" align="right" style="margin-right: 0px; margin-left: 0px; padding-top: px;"></a>
 						<h4/>
