--- a/index2.html
+++ b/index2.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 
-	<title>NeverTooLateToAutomate &#124; VBA and SQL repository by Piotr Janus</title>
+	<title>AutomateIt &#124; VBA, SQL and Tableau repository by Piotr Janus</title>
 
 	<meta charset="utf-8" />
 	<meta name="robots" content="index, follow" />
 	<meta name="description" content="Plenty of useful VBA codes that will help you to automate your daily Excel routine &#124; Basic SQL queries to extract data from a database">
-	<meta name="keywords" content="NeverTooLateToAutomate, VBA, Visual Basic for Applications, macro, SQL, Structured Query Language, automation, process enhancement, coding">
+	<meta name="keywords" content="AutomateIt, VBA, Visual Basic for Applications, macro, SQL, Structured Query Language, Tableau, business intelligence, automation, process enhancement, coding">
 	<meta name="author" content="Piotr Janus">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="format-detection" content="telephone=no"/>
@@ -25,7 +25,6 @@
 </head>
 
 
-
 <body data-spy="scroll" data-target=".navbar" data-offset="70">
 
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="background-color: #cc0000;">
@@ -36,7 +35,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>                        
 		  </button>
-		  <a class="navbar-brand" href="index.html">NeverTooLateToAutomate</a>
+		  <a class="navbar-brand" href="index.html">AutomateIt</a>
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
 		  <ul class="nav navbar-nav">
@@ -86,11 +85,13 @@
 								<h4><a href="#SELECT">SELECT</a></h4>
 								<h4><a href="#PLUS_MINUS">Operators +, -, *, /</a></h4>
 								<h4><a href="#WHERE">WHERE</a></h4>
+								<h4><a href="#Null_Values">NULL values</a></h4>
 							</div>
 							<div class="col-xs-6">
-								<h4><a href="#Null_Values">NULL values</a></h4>
 								<h4><a href="#JOINS">JOINS</a></h4>
-								<h4><a href="#JOINS">INSERT UPDATE DELETE</a></h4>
+								<h4><a href="#INSERT_INTO">INSERT UPDATE DELETE</a></h4>
+								<h4><a href="#INDEPENDENT">INDEPENDENT SUBQUERIES</a></h4>
+								<h4><a href="#CORRELATED">CORRELATED SUBQUERIES</a></h4>
 							</div>
 						</div>
 					</div>
@@ -5395,7 +5396,7 @@
 							Do you feel that as an analyst know how to use SQL is a must-have? Perhaps you simply want to learn something new?</p>
 							<p>If answer to any of these questions is yes, then you've got to the right place. 
 							On this website, you will find a bunch of SQL queries which will guide you how to find information in any database.</p>
-							<p>Cause it is never too late to automate!</p>
+							<p>Cause it's the right time to automate it!</p>
 							<!--mail--><a href="mailto:piotrjanus@outlook.com?Subject=Hi Piotr" style="color: #0e5051" target="_top">piotrjanus@outlook.com</a>
 							<!--Linkedin--><a href="https://pl.linkedin.com/in/januspiotr"><img src="In-2C-28px-TM.png" align="right" style="margin-right: 0px; margin-left: 0px; padding-top: px;"></a>
 						</h4>
@@ -5459,7 +5460,7 @@
 						<h4>
 						<p>Hi,</p>
 						<p>On my website I have gathered macros that I have developed and SQL queries that I have used throughout my career of an analyst and consultant in financial institutions. I would like to invite you to explore the content of the site.</p>
-						<p>Remember that it is never to late to automate!</p>
+						<p>Cause it's the right time to automate it!</p>
 						<a href="mailto:piotrjanus@outlook.com?Subject=Hi Piotr" style="color: #0e5051" target="_top">piotrjanus@outlook.com</a>
 						<a href="https://pl.linkedin.com/in/januspiotr"><img src="In-2C-28px-TM.png" align="right" style="margin-right: 0px; margin-left: 0px; padding-top: px;"></a>
 						<h4/>
@@ -5583,7 +5584,7 @@ $(window).scroll(function() {
 		<div class="container">
 			<div class="row" style="height: 55px">
 				<div class="col-xs-12" style="color: #FFFFFF";>
-					<h3><p align="right">Copyright &copy; 2018 Piotr Janus</p></h3 >
+					<h3><p align="right">Copyright &copy; 2019 Piotr Janus</p></h3 >
 				</div>
 			</div>
 		</div>
