--- a/index.html
+++ b/index.html
@@ -3540,8 +3540,8 @@
 					<div id="Scrabble" class="macroouter">
 					<h1>Scrabble</h1>
 					<h2>Helps to find 7 o 8 digit Scrabble words including blank and non-blank options.<br>
-					Downloads:
-					<a href="7letter.txt"><b>7-letter wordlist</b></a>
+					Downloads:<br>
+					<a href="7letter.txt"><b>7-letter wordlist</b></a><br>
 					<a href="8letter.txt"><b>8-letter wordlist</b></a></h2>
 						<div class="macroinner">
 							<h6>Sub Scrabble()</h6>
@@ -3561,7 +3561,7 @@
 							<h6>&nbsp;&nbsp    Dim b As Byte</h6>
 							<h6>&nbsp;&nbsp    Dim str As String</h6>
 							<br>
-							<h6>&nbsp;&nbsp    '7-letter check</h6>
+							<h5>&nbsp;&nbsp    '7-letter check</h6>
 							<h6>&nbsp;&nbsp    myletters = InputBox("Type your Scrabble letters. For blank type a digit, e.g. 1")</h6>
 							<h6>&nbsp;&nbsp    If Len(myletters) = 7 Or Len(myletters) = 8 Then</h6>
 							<h6>&nbsp;&nbsp;&nbsp;&nbsp        'do nothing</h6>
@@ -3570,7 +3570,7 @@
 							<h6>&nbsp;&nbsp;&nbsp;&nbsp         Exit Sub</h6>
 							<h6>&nbsp;&nbsp    End If</h5>
 							<br>
-							<h6>&nbsp;&nbsp    'import wordlist</h6>
+							<h5>&nbsp;&nbsp    'import wordlist</h6>
 							<h6>&nbsp;&nbsp    If Len(myletters) = 7 Then</h6>
 							<h6>&nbsp;&nbsp;&nbsp;&nbsp        myFile = "C:\Users\admin\Documents\Nauka\VBA Excel\Scrabble\siedmioliterowe.txt"</h6>
 							<h6>&nbsp;&nbsp    Else</h6>
