--- a/index3.html
+++ b/index3.html
@@ -63,7 +63,7 @@
 					<div class="dashed">	
 						<h1><br>Translators project in Tableau</h1>
 						<h2><p>Download the translators' data from the following link: <a href="Translators_list.xlsx"><b>Translators_list.xlsx</b></a></p>
-						<p>Download the ready report in Tableau from the following link: <a href="Translators_list.xlsx"><b>Translators.twb</b></a></p>
+						<p>Download the ready report in Tableau from the following link: <a href="Translators.twb"><b>Translators.twb</b></a></p>
 						<p>The excel file contains three sheets:</p>
 						<p>1. The Translators sheet contains the list of translators that are certified by the Polish Ministry of Justice. On the list there are their names, languages they translate, citizenship, address (country, voivodeship, city) and the year of licence being granted. [10847 rows]</p>
 						<img src="Translators.PNG" class="img-responsive" alt=""></h2>
