--- a/index.html
+++ b/index.html
@@ -3541,8 +3541,8 @@
 					<h1>Scrabble</h1>
 					<h2>Helps to find 7 o 8 digit Scrabble words including blank and non-blank options.<br>
 					Downloads:<br>
-					<a href="7letter.txt" style="color:#0e5051"><b>7-letter wordlist</b></a><br>
-					<a href="8letter.txt" style="color:#0e5051"><b>8-letter wordlist</b></a></h2>
+					<a href="7letter.txt" download style="color:#0e5051"><b>7-letter wordlist</b></a><br>
+					<a href="8letter.txt" download style="color:#0e5051"><b>8-letter wordlist</b></a></h2>
 						<div class="macroinner">
 							<h6>Sub Scrabble()</h6>
 							<h6>&nbsp;&nbsp    Dim Start As Double</h6>
