--- a/index.html
+++ b/index.html
@@ -3542,7 +3542,10 @@
 					<h2>Helps to find 7 o 8 digit Scrabble words including blank and non-blank options.<br>
 					Downloads:<br>
 					<a href="7letter.txt" download style="color:#0e5051"><b>7-letter wordlist</b></a><br>
-					<a href="8letter.txt" download style="color:#0e5051"><b>8-letter wordlist</b></a></h2>
+					<a href="8letter.txt" download style="color:#0e5051"><b>8-letter wordlist</b></a><br>
+					Full, up-to-date list of words available under:<br>
+					<a href="https://sjp.pl/slownik/growy/" target="_blank" style="color:#0e5051"> Słownik Języka Polskiego</a></h2>
+					</h2>
 						<div class="macroinner">
 							<h6>Sub Scrabble()</h6>
 							<h6>&nbsp;&nbsp    Dim Start As Double</h6>
@@ -3561,20 +3564,20 @@
 							<h6>&nbsp;&nbsp    Dim b As Byte</h6>
 							<h6>&nbsp;&nbsp    Dim str As String</h6>
 							<br>
-							<h5>&nbsp;&nbsp    '7-letter check</h6>
+							<h5>&nbsp;&nbsp    '7-letter check</h5>
 							<h6>&nbsp;&nbsp    myletters = InputBox("Type your Scrabble letters. For blank type a digit, e.g. 1")</h6>
 							<h6>&nbsp;&nbsp    If Len(myletters) = 7 Or Len(myletters) = 8 Then</h6>
 							<h6>&nbsp;&nbsp;&nbsp;&nbsp        'do nothing</h6>
-							<h6>&nbsp;&nbsp    Else</h5>
+							<h6>&nbsp;&nbsp    Else</h6>
 							<h6>&nbsp;&nbsp;&nbsp;&nbsp         MsgBox ("Run the macro again and type 7 or 8 letters")</h6>
 							<h6>&nbsp;&nbsp;&nbsp;&nbsp         Exit Sub</h6>
-							<h6>&nbsp;&nbsp    End If</h5>
+							<h6>&nbsp;&nbsp    End If</h6>
 							<br>
-							<h5>&nbsp;&nbsp    'import wordlist</h6>
+							<h5>&nbsp;&nbsp    'import wordlist</h5>
 							<h6>&nbsp;&nbsp    If Len(myletters) = 7 Then</h6>
-							<h6>&nbsp;&nbsp;&nbsp;&nbsp        myFile = "C:\Users\admin\Documents\Nauka\VBA Excel\Scrabble\siedmioliterowe.txt"</h6>
+							<h6>&nbsp;&nbsp;&nbsp;&nbsp        myFile = "C:\Users\yourpath\7letter.txt"</h6>
 							<h6>&nbsp;&nbsp    Else</h6>
-							<h6>&nbsp;&nbsp;&nbsp;&nbsp        myFile = "C:\Users\admin\Documents\Nauka\VBA Excel\Scrabble\ośmioliterowe.txt"</h5>
+							<h6>&nbsp;&nbsp;&nbsp;&nbsp        myFile = "C:\Users\yourpath\8letter.txt"</h6>
 							<h6>&nbsp;&nbsp    End If</h6>
 							<br>
 							<h6>&nbsp;&nbsp    Open myFile For Input As #1</h6>
@@ -3590,7 +3593,7 @@
 							<h6>&nbsp;&nbsp    Start = Timer</h6>
 							<br>
 							<h5>&nbsp;&nbsp    'letters sorted from the rarest</h5>
-							<h6>&nbsp;&nbsp    alphabet = "źńćśfóżhęgąbjłdptlcsuywzmnrkeioa"</h5>
+							<h6>&nbsp;&nbsp    alphabet = "źńćśfóżhęgąbjłdptlcsuywzmnrkeioa"</h6>
 							<h6>&nbsp;&nbsp    For i = 1 To 32</h6>
 							<h6>&nbsp;&nbsp;&nbsp;&nbsp         For j = 1 To Len(myletters)</h6>
 							<h6>&nbsp;&nbsp;&nbsp;&nbsp ;&nbsp;&nbsp             If Mid(alphabet, i, 1) = Mid(myletters, j, 1) Then</h6>
@@ -3606,8 +3609,8 @@
 							<h6>&nbsp;&nbsp;&nbsp;&nbsp        For i = 1 To Len(myletters)</h6>
 							<h6>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp				a = Len(myletters) - Len(WorksheetFunction.Substitute(myletters, Mid(myletters, i, 1), ""))</h6>
 							<h6>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp            	b = Len(myWord) - Len(WorksheetFunction.Substitute(myWord, Mid(myletters, i, 1), ""))</h6>
-							<h6>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp            If a = b Or b = a + 1 Then ' just one case that b = a + 1</h5>
-							<h6>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp					'do nothing</h5>
+							<h6>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp            If a = b Or b = a + 1 Then ' just one case that b = a + 1</h6>
+							<h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp					'do nothing</h5>
 							<h6>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp            Else</h6>
 							<h6>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp                GoTo NextItem</h6>
 							<h6>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp            End If</h6>
