--- a/index2.html
+++ b/index2.html
@@ -60,8 +60,7 @@
 					<div class="dashed">	
 						<h1><br>Start - how to set up SQL database?</h1>
 						<h2><p>Before you start learning SQL queries on your computer you need to download and install database management tools and connect to a database. You will need:</p>
-						<p><b>Northwind Database</b> - a sample database provided by Microsoft in early 2000.</p> 
-						<p><a href="#https://docs.microsoft.com/pl-pl/dotnet/framework/data/adonet/sql/linq/downloading-sample-databases">https://docs.microsoft.com/pl-pl/dotnet/framework/data/adonet/sql/linq/downloading-sample-databases</a></p></h2> 
+						<p>Download <a href="Northwind.bak" download style="color:#0e5051"><b>Northwind Database</b></a> - a sample database provided by Microsoft in early 2000.</p>
 						<img src="Northwind.png" class="img-responsive" alt="">
 						<h2><p>Next, download and install data management system - <b>Microsoft® SQL Server® Express</b>.</p>
 						<p><a href="#https://www.microsoft.com/en-us/download/details.aspx?id=55994">https://www.microsoft.com/en-us/download/details.aspx?id=55994</a></p></h2>
